syntax = "proto3";
package intento.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/trstlabs/intento/x/claim/types";

// Msg defines the Msg service.
service Msg {
  rpc ClaimClaimable(MsgClaimClaimable) returns (MsgClaimClaimableResponse);
}

enum Action {
  option (gogoproto.goproto_enum_prefix) = false;
  ActionActionAuthz = 0;
  ActionActionWasm = 1;
  ActionGovernanceVote = 2;
  ActionDelegateStake = 3;
}

// A Claim Records is the metadata of claim data per address
message ClaimRecord {
  // address of recipient
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  // total initial claimable amount for the address
  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];
  // index of status array refers to action enum #
  repeated Status status = 3 [
    (gogoproto.moretags) = "yaml:\"status\"",
    (gogoproto.nullable) = false
  ];
}

// Status contains for an action if it is completed and claimed
message Status {
  // true if action is completed
  bool action_completed = 1
      [ (gogoproto.moretags) = "yaml:\"action_completed\"" ];
  // true if action is completed
  // index refers to the 4 vesting periods for the given action
  repeated bool vesting_period_completed = 2
      [ (gogoproto.moretags) = "yaml:\"vesting_period_completed\"" ];
  // true if action is completed
  // index refers to the 4 vesting periods for the given action
  repeated bool vesting_period_claimed = 3
      [ (gogoproto.moretags) = "yaml:\"vesting_period_claimed\"" ];
}

message MsgClaimClaimable { string sender = 1; }

message MsgClaimClaimableResponse {
  // returned claimable amount for the address
  repeated cosmos.base.v1beta1.Coin claimed_amount = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"claimed_amount\""
  ];
}